# AIPROD_V2

./: .env.example  .gitignore  README.md  _nara_ideogram_v3.py  _retake_nara_portrait.py  _tmp_check.py  erreur_commit_push.md  main.py  methode_prompt.md  methode_prompt_V2.md  methode_prompt_V3.md  methode_prompt_V4.md  mini_concept_input.txt  pyproject.toml  test_hybrid_shot.py  test_hybrid_shot_v2.py  test_seedream45_shot.py
.github/workflows/: ci.yml
aiprod_adaptation/: cli.py
aiprod_adaptation/backends/: __init__.py  base.py  csv_export.py  json_flat_export.py
aiprod_adaptation/consistency/: __init__.py  asset_registry.py  audio_normalizer.py  color_manager.py  continuity_checker.py  timeline_engine.py
aiprod_adaptation/core/: __init__.py  comparison.py  cost_report.py  engine.py  io.py  pass1_segment.py  pass2_visual.py  pass3_shots.py  pass4_compile.py  production_budget.py  quality_gate.py  run_metrics.py  visual_bible.py
aiprod_adaptation/examples/: chapter1.txt  sample.txt
aiprod_adaptation/image_gen/: __init__.py  character_image_registry.py  character_mask.py  character_prepass.py  character_sheet.py  checkpoint.py  comfyui_adapter.py  flux_adapter.py  flux_kontext_adapter.py  huggingface_image_adapter.py  ideogram_image_adapter.py  image_adapter.py  image_request.py  openai_image_adapter.py  reference_pack.py  replicate_adapter.py  runway_image_adapter.py  storyboard.py
aiprod_adaptation/models/: intermediate.py  schema.py
aiprod_adaptation/post_prod/: __init__.py  audio_adapter.py  audio_request.py  audio_synchronizer.py  audio_utils.py  elevenlabs_adapter.py  ffmpeg_exporter.py  openai_tts_adapter.py  runway_tts_adapter.py  ssml_builder.py
aiprod_adaptation/tests/: test_adaptation.py  test_backends.py  test_cinematic_integration.py  test_cli.py  test_comfyui_adapter.py  test_comparison.py  test_consistency.py  test_continuity.py  test_image_gen.py  test_io.py  test_pass1_cinematic.py  test_pass2_cinematic.py  (+11 more)
pipeline/: __init__.py  shot_pipeline.py  test_hybrid_shot.py  test_hybrid_shot_v2.py  test_seedream45_shot.py
production/: README.md  benchmark_characters.py  characters.json  dashboard.json  dashboard.py  gen_assembly.py  gen_character_refs.py  gen_location_angles.py  gen_location_refs.py  gen_shots.py  grade.json  locations.json  run.py  storyboard.json
stories/: district_zero_ep01.fountain  district_zero_ep01.txt  district_zero_ep01_production_cut.txt  district_zero_season1_bible.md  district_zero_visual_bible.json
tasks/: METHODE_PRODUCTION_IA_2026.md  PRODUCTION_RULES.md  WORKFLOW.md  lessons.md  upgrade_concept.md
(+160 files in other folders)
