[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiprod-adaptation"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aiprod_adaptation*"]

[tool.mypy]
python_version = "3.11"
strict = true
