[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiprod-adaptation"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aiprod_adaptation*"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["aiprod_adaptation/core/adaptation/claude_adapter\\.py"]

[tool.pytest.ini_options]
testpaths = ["aiprod_adaptation/tests"]
addopts = "-m 'not integration'"

[tool.pytest.ini_options.markers]
integration = "marks tests as integration tests (excluded from CI, require external API keys)"
