[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiprod-adaptation"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=21.0",
]

[project.scripts]
aiprod = "aiprod_adaptation.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
llm = [
    "anthropic",
    "google-genai",
]
image = [
    "replicate",
]
video = [
    "runwayml",
    "requests",
    "PyJWT",
]
audio = [
    "openai",
    "elevenlabs",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["aiprod_adaptation*"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "requests.*",
    "replicate.*",
    "runwayml.*",
    "jwt.*",
    "elevenlabs.*",
    "openai.*",
    "google.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["aiprod_adaptation/tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (excluded from CI, require external API keys)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
